--- a/Limites_Asintotas.Rmd
+++ b/Limites_Asintotas.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "Limites_Asitontas"
 author: "Wilson Moreno"
-date: "11/19/2019"
+date: "11/21/2019"
 output:
-  word_document: default
+  
   html_document:
     df_print: paged
+  word_document: default
   pdf_document: default
-  
 ---
 
 ```{r setup, include=FALSE}
@@ -23,47 +23,41 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Asíntotas Vecticales
 
-Una asíntota  horizontal es una **recta horizontal**, que se la calcula aplicando el limite al infinito.
+Una asíntota  vertical es una **recta vertical**, que se la calcula aplicando el limite a un número dado, comunmente el *el número* logra que el $f(x)$ tenga una ideterminación 
 
-$$\lim_{x \to +\infty} f(x)   \qquad \text{y} \qquad \lim_{x \to -\infty} f(x)$$
+$$\lim_{x \to +a} f(x)   \qquad \text{y} \qquad \lim_{x \to -a} f(x)$$
 
 #### Ejemplo:
 Sea
 $$f(x) = \frac{x+1}{x-1}$$
-Calcular la asíntota  horizontal para $f(x)$.
+Calcular la asíntota vertica para $f(x)$.
 
 #### Solución:
-Para calcular la asíntota  se debe tomar el limite cuando $x$ tiende a $+\infty$ y $-\infty$, como se sigue:
+Para calcular la asíntota  se debe tomar el limite cuando $x$ tiende a $+1$ y $-1$, como se sigue:
 
 $$\begin{eqnarray}
-\lim_{x \to +\infty} f(x) & = & \lim_{x \to +\infty} \frac{x+1}{x-1}\\
-                          & = & \lim_{x \to +\infty} \frac{x}{x}\\
-                          & = & \lim_{x \to +\infty} 1\\
-                          & = & 1\\
-\lim_{x \to -\infty} f(x) & = & \lim_{x \to -\infty} \frac{x+1}{x-1}\\
-                          & = & \lim_{x \to -\infty} \frac{x}{x}\\
-                          & = & \lim_{x \to -\infty} 1\\
-                          & = & 1\\                          
+\lim_{x \to +\infty} f(x) & = & \lim_{x \to +1} \frac{x+1}{x-1}\\
+                          & = & \lim_{x \to +1} \frac{x+1}{+0}\\
+                          & = & \lim_{x \to +1} +\infty\\
+                          & = & +\infty\\
+\lim_{x \to -\infty} f(x) & = & \lim_{x \to -1} \frac{x+1}{x-1}\\
+                          & = & \lim_{x \to -1} \frac{x+1}{-0}\\
+                          & = & \lim_{x \to -1} -\infty\\
+                          & = & -\infty\\                          
 \end{eqnarray}
 $$
-Luego, esta función  tiene una asíntota  horizontal en $y = 1$. Para comprobar la certesa de nuestra afirmación tomemos una tabla de valores:
+Luego, esta función  tiene una asíntota vertical en $x = -1$. Para comprobar la certesa de nuestra afirmación tomemos una tabla de valores:
 
 
 ```{r tabla_function}
 library(knitr)
-x1 = seq(100, 1000, 100)
-x2 = seq(1000, 2000, 1000)
-
-x3 = seq(-100, -1000, -100)
-x4 = seq(-1000, -2000, -1000)
-
+x1 = seq(1.5, 1, length.out = 10)
+x3 = seq(0.5, 1, length.out = 10)
 y1 = (x1 + 1) / (x1 - 1)
-y2 = (x2 + 1) / (x2 - 1)
+y3 = (x3 + 1) / (x3 - 1) 
 
-y3 = (x3 + 1) / (x3 - 1)
-y4 = (x4 + 1) / (x4 - 1)
 
-datos = data.frame(x1, y1, x2, y2, x3, y3, x4, y4)
+datos = data.frame(x1, y1, x3, y3)
 kable(datos, align = 'c')
 ``` 
 
@@ -75,11 +69,13 @@ Luego, como se puede observar si nos aproximamos al mas o menos infinito la func
 ```{r plot, echo=FALSE}
 library(ggplot2)
 library(gridExtra)
-x = seq(100,20000,1000)
-y = (x+1)/(x-1)
-datos = data.frame(x,y)
-p2 <- ggplot(data = datos,aes(x,y)) + geom_line() + geom_hline(yintercept = 1, color = 'red')
-p1 <- ggplot(data = datos,aes(-x,y)) + geom_line() + geom_hline(yintercept = 1, color = 'red') + xlab("x")
+x1 = seq(1.5, 1, length.out = 100)
+x2 = seq(0.5, 1, length.out = 100)
+y1 = (x1+1)/(x1-1)
+y2 = (x2+1)/(x2-1)
+datos = data.frame(x1,y1,x2,y2)
+p2 <- ggplot(data = datos,aes(x1,y1)) + geom_line() + geom_vline(xintercept = 1, color = 'red') +  xlab("x")
+p1 <- ggplot(data = datos,aes(x2,y2)) + geom_line() + geom_vline(xintercept = 1, color = 'red') + xlab("x")
 
 grid.arrange(p1,p2, nrow = 1) 
 ``` 
@@ -91,13 +87,13 @@ grid.arrange(p1,p2, nrow = 1)
 $$g(x) = \frac{x^{2}+2}{x^{3}-1}$$
 *Solución:* 
 $$\begin{eqnarray}
-\lim_{x \to +\infty} g(x) & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
+\lim_{x \to +\infty} g(x) & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
                           & = & \\
-\lim_{x \to -\infty} g(x) & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
+\lim_{x \to -\infty} g(x) & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
                           & = & \\                          
 \end{eqnarray}
 $$
@@ -107,13 +103,13 @@ $$
 $$g(x) = \frac{2x^{2}+8x}{x^{2}-x}$$
 *Solución:* 
 $$\begin{eqnarray}
-\lim_{x \to +\infty} g(x) & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
+\lim_{x \to +\infty} g(x) & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
                           & = & \\
-\lim_{x \to -\infty} g(x) & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
+\lim_{x \to -\infty} g(x) & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
                           & = & \\                          
 \end{eqnarray}
 $$
@@ -123,13 +119,13 @@ $$
 $$g(x) = \sqrt{\frac{x+8}{x-1}}$$
 *Solución:* 
 $$\begin{eqnarray}
-\lim_{x \to +\infty} g(x) & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
+\lim_{x \to +\infty} g(x) & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
                           & = & \\
-\lim_{x \to -\infty} g(x) & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
+\lim_{x \to -\infty} g(x) & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
                           & = & \\                          
 \end{eqnarray}
 $$
@@ -139,13 +135,13 @@ $$
 $$g(x) = \frac{\sqrt{x^{}+2}}{x-1}$$
 *Solución:* 
 $$\begin{eqnarray}
-\lim_{x \to +\infty} g(x) & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
-                          & = & \lim_{x \to +\infty} \\
+\lim_{x \to +\infty} g(x) & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
+                          & = & \lim_{x \to +} \\
                           & = & \\
-\lim_{x \to -\infty} g(x) & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
-                          & = & \lim_{x \to -\infty} \\
+\lim_{x \to -\infty} g(x) & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
+                          & = & \lim_{x \to -} \\
                           & = & \\                          
 \end{eqnarray}
 $$
